# astra-toolbox

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  NEWS.txt  README.md  README.txt  README_MPI.txt  astra_vc08.sln  astra_vc08.vcproj  astra_vc09.sln  astra_vc09.vcproj  astra_vc11.sln  astra_vc11.vcxproj  astra_vc11.vcxproj.filters  astra_vc14.sln  astra_vc14.vcxproj  astra_vc14.vcxproj.filters  test_geometry.m
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
cpp/: build.sh  creators.cpp  creators.hpp
cuda/: dlpack_support.cu  stream.cu
mpi/: mpiLoop.py  toolbox.py
python/: README.md  builder.py  doc  pyproject.toml  setup.py
python/astra/: ASTRAProjector.py  CFloat32CustomPython.h  PyAlgorithmFactory.pxd  PyAlgorithmManager.pxd  PyData2DManager.pxd  PyData3DManager.pxd  PyIncludes.pxd  PyIndexManager.pxd  PyMatrixManager.pxd  PyProjector2DFactory.pxd  PyProjector2DManager.pxd  PyProjector3DFactory.pxd  PyProjector3DManager.pxd  PyXMLDocument.pxd  __init__.py  algorithm.py  algorithm_c.pyx  astra.py  astra_c.pyx  config_c.pyx  creators.py  data2d.py  data2d_c.pyx  data3d.py  data3d_c.pyx  experimental.pyx  extrautils.pyx  functions.py  log.py  log_c.pyx  matlab.py  matrix.py  matrix_c.pyx  mpi_c.pyx  mpi_util.py  operator.py  optomo.py  plugin.py  plugin_c.pyx  projector.py  (+7 more)
python/astra/astra_plot/: __init__.py  create_example.py  draw.py  plot_geom.py  utils.py
python/astra/plugins/: __init__.py  cgls.py  sirt.py
python/astra/src/: CFloat32CustomPython.h  PythonPluginAlgorithm.cpp  PythonPluginAlgorithm.h  PythonPluginAlgorithmFactory.cpp  PythonPluginAlgorithmFactory.h  dlpack.cpp  dlpack.h
python/conda/: README.txt  bld.bat  build.sh  meta.yaml
python/conda/astra-toolbox/: bld.bat  build.sh  conda_build_config.yaml  conda_build_config_py27.yaml  conda_build_config_py35.yaml  conda_build_config_py36.yaml  conda_build_config_py37.yaml  conda_build_config_py38.yaml  linux_build_config.yaml  linux_deb11_build_config.yaml  meta.yaml  win64_build_config.yaml
python/conda/libastra/: bld.bat  build.sh  linux_build_config.yaml  linux_deb11_build_config.yaml  linux_deb8_build_config.yaml  linux_deb9_build_config.yaml  meta.yaml  win64_build_config.yaml
python/conda/linux_release/: README.txt  build.sh  release.sh
python/conda/linux_release/buildenv/: Dockerfile  archive.Dockerfile  build.sh
python/conda/linux_release/buildenv.deb11/: Dockerfile
python/conda/linux_release/buildenv.deb8/: Dockerfile
python/conda/linux_release/buildenv.deb9/: Dockerfile
python/conda/linux_release/builder/: Dockerfile
python/docSRC/: ASTRAProjector.rst  conf.py  creators.rst  data2d.rst  data3d.rst  functions.rst  index.rst  matlab.rst  operator.rst  plugins.rst  projector.rst
python/docSRC/_build/doctrees/: ASTRAProjector.doctree  algorithm.doctree  astra.doctree  creators.doctree  data2d.doctree  data3d.doctree  environment.pickle  functions.doctree  index.doctree  matlab.doctree  matrix.doctree  projector.doctree
python/docSRC/_build/html/: .buildinfo  ASTRAProjector.html  algorithm.html  astra.html  creators.html  data2d.html  data3d.html  functions.html  genindex.html  index.html  matlab.html  matrix.html  objects.inv  projector.html  py-modindex.html  search.html  searchindex.js
python/docSRC/_build/html/_modules/: index.html
python/docSRC/_build/html/_modules/astra/: ASTRAProjector.html  algorithm.html  astra.html  creators.html  data2d.html  data3d.html  functions.html  matlab.html  matrix.html  projector.html
python/docSRC/_build/html/_sources/: algorithm.txt  astra.txt  matrix.txt
python/docSRC/_templates/: layout.html
python/pypi/: MANIFEST.in  howtobuild.sh  requirements.txt  setup.cfg  setup.py
samples/: s001_sinogram_par2d.m  s002_data2d.m  s003_gpu_reconstruction.m  s004_cpu_reconstruction.m  s005_3d_geometry.m  s006_3d_data.m  s007_3d_reconstruction.m  s008_gpu_selection.m  s009_projection_matrix.m  s010_supersampling.m  s011_object_info.m  s012_masks.m  s013_constraints.m  s014_FBP.m  s015_fp_bp.m  s016_plots.m
src/: Algorithm.cpp  ArtAlgorithm.cpp  AstraObjectFactory.cpp  AstraObjectManager.cpp  AsyncAlgorithm.cpp  Avx2Algorithms.cpp  Avx512Algorithms.cpp  BackProjectionAlgorithm.cpp  CMakeLists.txt  CglsAlgorithm.cpp  CompositeGeometryManager.cpp  ConeProjectionGeometry3D.cpp  ConeVecProjectionGeometry3D.cpp  Config.cpp  ConvexHullAlgorithm.cpp  CudaBackProjectionAlgorithm.cpp  CudaBackProjectionAlgorithm3D.cpp  CudaCglsAlgorithm.cpp  CudaCglsAlgorithm3D.cpp  CudaDartMaskAlgorithm.cpp  CudaDartMaskAlgorithm3D.cpp  CudaDartSmoothingAlgorithm.cpp  CudaDartSmoothingAlgorithm3D.cpp  CudaDataOperationAlgorithm.cpp  CudaEMAlgorithm.cpp  CudaFDKAlgorithm3D.cpp  CudaFilteredBackProjectionAlgorithm.cpp  CudaForwardProjectionAlgorithm.cpp  CudaForwardProjectionAlgorithm3D.cpp  CudaProjector2D.cpp  CudaProjector3D.cpp  CudaReconstructionAlgorithm2D.cpp  CudaRoiSelectAlgorithm.cpp  CudaSartAlgorithm.cpp  CudaSirtAlgorithm.cpp  CudaSirtAlgorithm3D.cpp  CudaTVAlgorithm.cpp  CylConeVecProjectionGeometry3D.cpp  Data2D.cpp  Data3D.cpp  (+68 more)
tests/: CMakeLists.txt  main.cpp  test_AstraObjectManager.cpp  test_FanFlatProjectionGeometry2D.cpp  test_Float32Data2D.cpp  test_Float32ProjectionData2D.cpp  test_Float32VolumeData2D.cpp  test_Fourier.cpp  test_ParallelBeamLineKernelProjector2D.cpp  test_ParallelBeamLinearKernelProjector2D.cpp  test_ParallelProjectionGeometry2D.cpp  test_VolumeGeometry2D.cpp  test_XMLDocument.cpp  tests_vc08.vcproj
tests/python/: test_dlpack.py  test_line2d.py  test_rec_scaling.py
tests/python/functional/: test_line2d.py  test_multigpu_consistency.py  test_rec_scaling.py
tests/python/integration/: conftest.py  test_dlpack.py  test_dlpack2d.py  test_dlpack3d.py  test_gpulink.py
tests/python/unit/: test_algorithm_module.py  test_algorithms_2d.py  test_algorithms_3d.py  test_astra_module.py  test_data_2d.py  test_data_3d.py  test_experimental.py  test_experimental_2d.py  test_geometries_2d.py  test_geometries_3d.py  test_matrix.py  test_optomo.py  test_projector_module.py  test_tests_module.py
(+509 files in other folders)
