# TODO: Move more metadata here from setup.py
# (And figure out how to not make that ship every single file)

[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[tool.astra.nocuda]
cuda = false

[tool.astra.cuda]
cuda = true

[tool.astra.linux_module]
extra_lib = [ 'astra/libastra.so*' ]
cuda = false

[tool.astra.linux_module_cuda]
extra_lib = [ 'astra/libastra.so*' ]
cuda = true

[tool.astra.windows_cuda]
extra_lib = [ 'astra/AstraCuda64.dll' ]
install_requires = ['nvidia-cuda-runtime-cu12', 'nvidia-cufft-cu12' ]
extra_dll_directories = [ 'nvidia\cuda_runtime\bin', 'nvidia\cufft\bin' ]

# To check, for cuda 13:
# install_requires = ['nvidia-cuda-runtime==13.*', 'nvidia-cufft==12.*']
# extra_dll_directories = [ 'nvidia\cu13\bin\x86_64' ]
cuda = true

[tool.astra.pypi_linux_cuda]
install_requires = ['nvidia-cuda-runtime-cu12', 'nvidia-cufft-cu12']
extra_lib = [ 'astra/libastra.so*' ]
cuda = true

[tool.astra.conda_cuda]
cuda = true
